# community-hub

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: health.py  router.py
backend/app/api/v1/auth/: constants.py
backend/app/api/v1/auth/api/: dependencies.py  router.py
backend/app/api/v1/auth/domain/: jwt.py  password.py  schemas.py  service.py  validators.py
backend/app/api/v1/users/domain/: models.py  schemas.py  service.py  validators.py
backend/app/api/v1/users/repositories/: user_repository.py
backend/app/core/: config.py  lifespan.py
backend/app/db/: __init__.py  dependencies.py  mixins.py  models.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: f4c35a13db36_create_user_table.py
backend/scripts/: dev.sh  docker-entrypoint.sh
frontend/: .dockerignore  .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: client.js  endpoints.js  interceptor.js
frontend/src/constants/: api.js  index.js
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAuth.js  useProtectedRoute.js
frontend/src/pages/: NotFoundPage.jsx
frontend/src/router/: AppRouter.jsx  ProtectedRoute.jsx  (+1 more)
readme/: CONTRIBUTING.md  PR_INSTRUCTIONS.md  client-folder-structure.md  development-setup-readme-linux.md  development-setup-readme-macos.md  development-setup-readme-windows.md  server-folder-structure.md
(+19 files in other folders)
